--- a/src/styles/components/_flagComponent.scss
+++ b/src/styles/components/_flagComponent.scss
@@ -1,4 +1,6 @@
 .div-flag-component {
+    font-family: 'Montserrat';
+    font-weight: bold;
     display: flex;
     flex-direction: column;
     text-align: center;
