--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,9 @@
 @import './components/flagComponent';
 @import './components/dropdown';
 @import './pages/listofstates';
+@import './pages/quizCapitales';
+@import './pages/quizDrapeaux';
+
 body{
     background-color: rgb(207, 221, 248) ;
 }
