--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,6 +14,7 @@
 @import './pages/listofstates';
 @import './pages/quizCapitales';
 @import './pages/quizDrapeaux';
+@import './components/quizComponent';
 
 body{
     background-color: rgb(207, 221, 248) ;
