--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,6 +15,7 @@
 @import './pages/quizCapitales';
 @import './pages/quizDrapeaux';
 @import './components/quizComponent';
+@import './pages/quizResult';
 
 body{
     background-color: rgb(207, 221, 248) ;
