--- a/src/styles/pages/_quiz.scss
+++ b/src/styles/pages/_quiz.scss
@@ -2,12 +2,14 @@
     animation: myAnimQuiz 1s ease 0s 1 normal forwards;
     color: $color-font;
     text-align: center;
-    height: 490px;
+    height: 390px;
     .div-quiz {
+        margin-top: 45px;
         display: flex;
+
         img{
             width: 300px;
-            height: 198px;
+            height: 198px; 
         }
         button {
             background-color: $color-font;
@@ -32,7 +34,7 @@
             text-align: center;
             
         }
-        .quiz-drapeaux {
+        .quiz-drapeaux { 
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -41,4 +43,37 @@
             justify-content: center;
         }
     }
+}
+
+@media screen and (max-width: 375px){
+    .div-quiz-container {
+        h1 { 
+            display: none;
+        }
+        .div-quiz {
+            display: block !important;
+            h2 {
+                font-size: 20px;
+            }
+            img { 
+                width: 200px;
+                height: 105px;
+            }
+            button {
+                width: 100px;
+                height: 30px;
+                border-radius: 5px;
+                font-size: 15px;
+                margin-top: 10px;
+            }
+            .quiz-capitales {
+                width: 100% !important;
+                margin-top: 25px;
+            }
+            .quiz-drapeaux {
+                width: 100% !important;
+                margin-top: 25px;
+            }   
+        } 
+    } 
 }
