--- a/src/styles/pages/_quizResult.scss
+++ b/src/styles/pages/_quizResult.scss
@@ -1,7 +1,7 @@
 .div-quiz-result {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    //height: 440px;
     width: 100%;
     h1 {
         text-align: center;
@@ -20,7 +20,7 @@
                 margin-right: 30px;
             }
         }
-        hr {
+        hr { 
             width: 50%;
             margin-left: 0;
         }
@@ -28,5 +28,27 @@
     button {
         @include button;
         color: white;
+        width: 300px;
+        margin-bottom: 30px;
+        margin-top: 30px;
+    }
+}
+
+@media screen and (max-width: 375px){
+    .div-quiz-result {
+        h1 {
+            font-size: 19px;
+        }
+        div {
+            div {
+                .p-none {
+                    display: none;
+                }
+            }
+        }
+        button {
+            width: auto;
+            font-size: 15px;
+        }
     }
 }
