--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,3 +16,4 @@
 @import './pages/quizDrapeaux';
 @import './components/quizComponent';
 @import './pages/quizResult';
+@import './components/lightbox';
