--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -6,6 +6,7 @@ html, body {
 	background-color: rgb(207, 221, 248) ;
 	font-family: 'Montserrat';
     font-weight: bold;
+	//box-sizing: border-box;
 }
 
 @mixin button {
