--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -43,15 +43,14 @@
         height: 480px;
         .div-container {
             flex-direction: column;
-            //margin-bottom: 120px;
             div {
-                overflow: scroll;
+                margin-top: 15px;
                 width: 100%;
                 h1 {
                     width: 100%;
                     font-size: 20px;
                 }
-                img {
+                img { 
                     width: 200px;
                     height: 105px;
                 }
@@ -60,7 +59,7 @@
                     color: white;
                     width: 100px;
                     height: 30px;
-                    border-radius: 10px;
+                    border-radius: 5px;
                     font-family: $font;
                     font-weight: bold;
                     font-size: 15px;
