add color states

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -777,6 +777,7 @@ path :focus {
     position: static !important;
     margin-top: 100px;
     width: 100% !important;
+    color: rgb(28, 149, 158);
   }
 }
 .div-listofpays {
