--- a/src/styles/components/_dropdown.scss
+++ b/src/styles/components/_dropdown.scss
@@ -71,5 +71,6 @@
         position: static !important;
        margin-top: 100px;
        width: 100% !important;
+       color: rgb(28, 149, 158);
     }
 }
